--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 h5py==3.6.0
+hydra-core>=1.0
 librosa==0.8.1
 musdb==0.4.0
 museval==0.4.0
 noisereduce==2.0.0
 numba==0.55.1
-numpy==1.22.0
+numpy==1.21.5
+omegaconf>=2.0.0
 pytorch_lightning==1.5.9
 scikit_learn==1.0.2
 scipy==1.7.3
